# official-examples

./: .gitignore  .prettierignore  README.md  build_examples.sh
.github/workflows/: ci.yml
Complete-Reference-Designs/: README.md
complete-reference-designs/: README.md
core-system-features/: README.md
core-system-features/fungible-tokens/: instantiate_mintable.rtm
core-system-features/non-fungible-data/: Cargo.toml
core-system-features/proofs/: Cargo.toml
getting-started/: README.md
getting-started/hello-token/: Cargo.toml  README.md  instantiate_mintable.rtm
getting-started/react-js-dapp/: README.md  package-lock.json  package.json
getting-started/react-ts-dapp/: README.md  index.html  package.json
getting-started/svelte-js-dapp/: README.md  package-lock.json  package.json
getting-started/svelte-ts-dapp/: README.md  package-lock.json  package.json  svelte.config.js
getting-started/vanilla-js-dapp/: README.md  index.html  main.js  package-lock.json  package.json  style.css
scrypto-design-patterns/: README.md
scrypto-design-patterns/01-blueprint-proxy/: README.md  run-oracle-proxy-with-global.sh  run-oracle-proxy-with-owned.sh  setup.sh
scrypto-design-patterns/01-blueprint-proxy/oracle-v1/: Cargo.toml
scrypto-design-patterns/01-blueprint-proxy/oracle-v1/src/: lib.rs
scrypto-design-patterns/blueprint-proxy/: Cargo.toml  README.md  run-oracle-generic-proxy-with-global.sh  run-oracle-proxy-with-global.sh  setup.sh
scrypto-design-patterns/blueprint-proxy/manifests/: get_prices_from_oracle_via_oracle_generic_proxy.rtm  get_prices_via_oracle_proxy.rtm  get_symbol_address_from_oracle_v3_via_oracle_generic_proxy.rtm  initialize_oracle_in_oracle_proxy.rtm  instantiate_component.rtm  set_prices_and_add_symbols_in_oracle_v3.rtm  set_prices_in_oracle.rtm
scrypto-design-patterns/blueprint-proxy/oracle-generic-proxy-with-global/: Cargo.toml
scrypto-design-patterns/blueprint-proxy/oracle-generic-proxy-with-global/src/: lib.rs
scrypto-design-patterns/blueprint-proxy/oracle-proxy-with-global/: Cargo.toml
scrypto-design-patterns/blueprint-proxy/oracle-proxy-with-global/src/: lib.rs
scrypto-design-patterns/blueprint-proxy/oracle-proxy-with-owned/: Cargo.toml
scrypto-design-patterns/blueprint-proxy/oracle-proxy-with-owned/src/: lib.rs
scrypto-design-patterns/blueprint-proxy/oracle-v1/: Cargo.toml
scrypto-design-patterns/blueprint-proxy/oracle-v2/: Cargo.toml
scrypto-design-patterns/blueprint-proxy/oracle-v2/src/: lib.rs
scrypto-design-patterns/blueprint-proxy/oracle-v3/: Cargo.toml
scrypto-design-patterns/blueprint-proxy/oracle-v3/src/: lib.rs
scrypto-design-patterns/yield_amm/: README.md
scrypto-design-patterns/yield_amm/amm/: Cargo.toml  README.md
scrypto-design-patterns/yield_amm/amm/src/: dex.rs
scrypto-design-patterns/yield_amm/amm/tests/: lib.rs
scrypto-design-patterns/yield_amm/amm/transaction_manifest/: add_liquidity.rtm  compute_market.rtm  get_vault_reserves.rtm  instantiate_amm.rtm  remove_liquidity.rtm  set_initial_ln_implied_rate.rtm  swap_exact_lsu_for_pt.rtm  swap_exact_lsu_to_yt.rtm  swap_exact_pt_for_lsu.rtm  swap_exact_yt_for_lsu.rtm
step-by-step/: .gitignore  README.md
step-by-step/01-hello-token-explained/: README.md
step-by-step/01-running-your-first-project/: Cargo.toml  README.md
step-by-step/02-hello-token-explained/: Cargo.toml  README.md
step-by-step/02-running-your-first-project/: Cargo.toml  README.md
step-by-step/03-create-a-custom-resource/: Cargo.toml  README.md
step-by-step/04-gumball-machine/: Cargo.toml  README.md
step-by-step/05-gumball-machine-with-owner/: Cargo.toml  README.md
step-by-step/06-refillable-gumball-machine/: Cargo.toml  README.md
step-by-step/07-gumball-machine-transaction-manifests/: Cargo.toml  README.md
step-by-step/08-ledger-ready-gumball-machine/: Cargo.toml  README.md
step-by-step/09-hello-token-front-end/: README.md
step-by-step/10-gumball-machine-front-end/: README.md  package-lock.json
step-by-step/11-gumball-machine-dapp-varification-data/: README.md
step-by-step/11-gumball-machine-dapp-varifiction-data/: README.md
step-by-step/11-gumball-machine-dapp-verification-data/: README.md
step-by-step/11-hello-non-fungible/: Cargo.toml  README.md
step-by-step/12-candy-store/: Cargo.toml  README.md  setup.bat
step-by-step/12-hello-non-fungible/: Cargo.toml  README.md
step-by-step/12-hello-non-fungible/src/: lib.rs
step-by-step/13-candy-store/: Cargo.toml  README.md
step-by-step/13-candy-store-with-recallable-badges/: Cargo.toml  README.md
step-by-step/13-candy-store/manifests/: buy_candy.rtm  mint_staff_badge.rtm  set_candy_price.rtm
step-by-step/13-candy-store/src/: lib.rs
step-by-step/14-candy-store-modules/: Cargo.toml  README.md
step-by-step/14-candy-store-with-recallable-badges/: Cargo.toml  README.md
step-by-step/14-candy-store-with-recallable-badges/manifests/: instantiate_candy_store.rtm  recall_staff_badge.rtm  set_chocolate_egg_price.rtm  withdraw_earnings.rtm
step-by-step/14-candy-store-with-recallable-badges/src/: lib.rs
step-by-step/15-candy-store-modules/: Cargo.toml  README.md
step-by-step/15-candy-store-owned-modules/: Cargo.toml  README.md
step-by-step/16-candy-store-external-blueprint/: README.md
step-by-step/16-candy-store-owned-modules/: Cargo.toml  README.md  setup.bat
step-by-step/17-candy-store-external-blueprint/: README.md  setup.bat  setup.sh
step-by-step/17-candy-store-external-component/: README.md  setup.bat
step-by-step/18-candy-store-external-component/: README.md  setup.sh
step-by-step/18-hello-test/: README.md
step-by-step/19-candy-store-tests/: README.md
step-by-step/19-hello-test/: Cargo.toml  (+1 more)
step-by-step/21-radiswap-dapp/scrypto-package/: Cargo.toml
step-by-step/21-radiswap-dapp/scrypto-package/manifests/resim/: add_liquidity.rtm  create_resources.rtm
step-by-step/21-radiswap-dapp/scrypto-package/manifests/stokenet/: remove_liquidity.rtm  swap.rtm
step-by-step/21-radiswap-dapp/scrypto-package/src/: lib.rs
step-by-step/21-radiswap-dapp/scrypto-package/tests/: lib.rs
(+284 files in other folders)
