[package]
name = "candy-store"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004" }

[dev-dependencies]
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace
