[package]
name = "oracle-v1"
version = "1.0.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }

[features]
default = []
test = []

[lib]
doctest = false
crate-type = ["cdylib", "lib"]
