[package]
name = "oracle-generic-proxy-with-global"
version = "1.0.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }

[features]
default = []
test = []

[lib]
doctest = false
crate-type = ["cdylib", "lib"]
