[package]
name = "oracle-v1"
version = "1.0.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }

[features]
default = []
test = []

[lib]
doctest = false
crate-type = ["cdylib", "lib"]
