[package]
name = "oracle-v3"
version = "1.0.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004" }

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004" }

[features]
default = []
test = []

[lib]
doctest = false
crate-type = ["cdylib", "lib"]
