[package]
name = "radiswap"
version = "1.1.2"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }

[dev-dependencies]
radiswap = { path = ".", features = ["test"] }
native-sdk = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []
test = []

[lib]
doctest = false
crate-type = ["cdylib", "lib"]
