[package]
name = "radiswap"
version = "1.1.2"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-9396c507" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-9396c507" }

[dev-dependencies]
radiswap = { path = ".", features = ["test"] }
radix-native-sdk = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-9396c507" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-9396c507" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-9396c507" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-9396c507" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []
test = []

[lib]
doctest = false
crate-type = ["cdylib", "lib"]
