[package]
name = "radiswap"
version = "1.1.2"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004089093bc2a873c55213298c0d8711f" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004089093bc2a873c55213298c0d8711f" }

[dev-dependencies]
radiswap = { path = ".", features = ["test"] }
radix-native-sdk = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004089093bc2a873c55213298c0d8711f" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004089093bc2a873c55213298c0d8711f" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004089093bc2a873c55213298c0d8711f" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "220268f004089093bc2a873c55213298c0d8711f" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []
test = []

[lib]
doctest = false
crate-type = ["cdylib", "lib"]
